--- a/client/src/app/components/nes-layout/game-over/game-over.component.html
+++ b/client/src/app/components/nes-layout/game-over/game-over.component.html
@@ -1,6 +1,6 @@
 <div class="game-over prevent-select" [ngClass]="mode">
     <h1 class="prevent-select">{{getText(mode)}}</h1>
-    <div class="next-button prevent-select" [ngClass]="{'no-button': !showNext}" (click)="clickNext.emit()">
+    <div class="next-button prevent-select" [ngClass]="{'no-button': !showNext}" (click)="goClickNext()">
         <p class="prevent-select">{{getButton(mode)}}</p>
     </div>
 </div>
