--- a/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.scss
+++ b/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.scss
@@ -40,15 +40,38 @@
 
 @media screen and (max-width: 1200px) {
     .player {
-        transform: scale(0.8) translate(-60%, -60%);
+        zoom: 0.8;
     }
 }
 
 @media screen and (max-width: 950px) {
     .player {
-        transform: scale(0.6) translate(-80%, -80%);
+        zoom: 0.7;
     }
-    
+}
+
+@media screen and (max-width: 800px) {
+    .player {
+        zoom: 0.6;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .player {
+        zoom: 0.5;
+    }
+}
+
+@media screen and (max-width: 570px) {
+    .player {
+        zoom: 0.4;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .player {
+        zoom: 0.35;
+    }
 }
 
 app-xp-status {
