--- a/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
+++ b/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
@@ -33,8 +33,8 @@
 
 .score {
     position: absolute;
-    bottom: 30px;
-    right: 10px;
+    bottom: 20px;
+    left: 20px;
     width: 125px;
     pointer-events: none;
 }
