--- a/client/src/app/components/main-chat/main-chat.component.scss
+++ b/client/src/app/components/main-chat/main-chat.component.scss
@@ -63,6 +63,7 @@ img {
     height: 400px;
     max-height: 50dvh;
 
+    z-index: 10;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25), 
               0px 2px 4px rgba(0, 0, 0, 0.15);
 }
