--- a/client/src/app/components/ui/x/x.component.html
+++ b/client/src/app/components/ui/x/x.component.html
@@ -1,4 +1,4 @@
-<button (click)="clickX.emit()" appClickSound>
+<button (click)="clickX.emit($event)" appClickSound>
     <div class="x-container">
         <svg class="x" width="10" height="10" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="1.06641" width="8.39549" height="1.50387" rx="0.751936" transform="rotate(45 1.06641 0)"/>
