--- a/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.html
+++ b/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.html
@@ -41,7 +41,7 @@
                     [countdown]="showBoardText(state, playerIndex) ?? playerData.countdown"
                     [gameOverShowNext]="false"
                     [gameOver]="getGameOverMode(state, playerIndex)"
-                    [dimmed]="player.leftRoom"
+                    [dimmed]="player.leftRoom || state.status === MultiplayerRoomStatus.AFTER_MATCH"
                     />                    
             </ng-container>
 
