--- a/client/src/app/components/nes-layout/nes-board/nes-board.component.html
+++ b/client/src/app/components/nes-layout/nes-board/nes-board.component.html
@@ -1,4 +1,4 @@
-<div class="board-container" [ngClass]="{'gold': gold}"
+<div class="board-container" [ngClass]="{'gold': gold}" [ngClass]="{'animate' : animateOpacity}"
 [ngStyle]="{'backgroundColor' : isLoginPage ? 'transparent' : 'black', 'borderWidth' : isLoginPage ? '0.5px' : '1px'}">
 
     <div class="empty-board" *ngIf="hide"
@@ -15,7 +15,7 @@
     <canvas #boardCanvas class="board-canvas" *ngIf="!hide && canvasBoard"
         [width]="(scale*boardWidthPixels * CANVAS_SCALE)"
         [height]="(scale*boardHeightPixels * CANVAS_SCALE)"
-        [ngStyle]="{'width': scale*boardWidthPixels + 'px', 'height': scale*boardHeightPixels + 'px'}"></canvas>
+        [ngStyle]="{'width': scale*boardWidthPixels + 'px', 'height': scale*boardHeightPixels + 'px', 'opacity': defaultOpacity}"></canvas>
 
     <svg class="board-svg" *ngIf="!hide && board && !canvasBoard"
         [attr.width]="(scale*boardWidthPixels) + 'px'"
@@ -25,7 +25,7 @@
         <g (mouseleave)="onMouseLeave()">
             <g *ngFor="let y of ZERO_TO_NINETEEN; trackBy: trackByIndex">
                 <g *ngFor="let x of ZERO_TO_NINE; trackBy: trackByIndex">
-                    <g app-nes-block class="block" [ngClass]="{'animate' : animateOpacity}"
+                    <g app-nes-block class="block"
                         [attr.opacity]="getOpacityAt(x,y)"
                         [color]="getBlockAt(x,y)"
                         [level]="level"
