--- a/client/src/app/components/ui/editable-keybind/editable-keybind.component.html
+++ b/client/src/app/components/ui/editable-keybind/editable-keybind.component.html
@@ -1,4 +1,4 @@
-<div class="keybind">
-    <img src="./assets/img/button-icons/edit.svg" />
+<div class="keybind" [ngStyle]="{'backgroundColor': color}">
+    <img *ngIf="editable" src="./assets/img/button-icons/edit.svg" />
     <p class="prevent-select" [ngStyle]="{'fontSize' : getFontSize() + 'px'}">{{getDisplayKeybind()}}</p>
 </div>
