--- a/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.scss
+++ b/client/src/app/components/layout/room/multiplayer-room/multiplayer-room.component.scss
@@ -98,17 +98,31 @@ app-xp-status {
     gap: 5px;
 }
 
-.ocr-config p, .ocr-config h1 {
+.abort-text {
+    position: absolute;
+    width: 53.4%;
+    height: 60%;
+    bottom: 0;
+    left: 0;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.board-text p, .board-text h1 {
     font-family: 'NES';
     color: white;
     margin: 0;
     padding: 0;
 }
 
-.ocr-config h1 {
+.board-text h1 {
     font-size: 25px;
 }
 
-.ocr-config p {
+.board-text p {
     font-size: 21px;
 }
