--- a/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.html
+++ b/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.html
@@ -42,7 +42,8 @@
         </div>
 
         <div class="lower-container">
-            <p>Level {{foundOpponent.startLevel}} start</p>
+            <p *ngIf="!foundOpponent.levelCap">Level {{foundOpponent.startLevel}} start</p>
+            <p *ngIf="foundOpponent.levelCap">Level {{foundOpponent.startLevel}} start, capped at {{foundOpponent.levelCap}}</p>
         </div>
 
     </div>
