--- a/client/src/app/components/nes-layout/nes-board/nes-board.component.scss
+++ b/client/src/app/components/nes-layout/nes-board/nes-board.component.scss
@@ -44,6 +44,10 @@
     font-size: 50px;
 }
 
+.countdown.lower {
+    top: 60%;
+}
+
 .countdown.small {
     font-size: 30px;
     transform: translateY(-110px);
