--- a/client/src/app/components/layout/friends/challenge/challenge.component.html
+++ b/client/src/app/components/layout/friends/challenge/challenge.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container-left">
-    <p *ngIf="isSender">You challenged {{challenge.receiverUsername}} to a match (First to {{challenge.winningScore}})</p>
-    <p *ngIf="!isSender">{{challenge.senderUsername}} challenged you to a match (First to {{challenge.winningScore}})</p>
+    <p *ngIf="isSender">You challenged {{invitation.receiverUsername}} to a match (First to {{invitation.winningScore}})</p>
+    <p *ngIf="!isSender">{{invitation.senderUsername}} challenged you to a match (First to {{invitation.winningScore}})</p>
 </div>
   <div class="container-right">
     <app-solid-button *ngIf="!isSender"
