--- a/client/src/app/components/layout/friends/friend-element/friend-element.component.html
+++ b/client/src/app/components/layout/friends/friend-element/friend-element.component.html
@@ -22,9 +22,9 @@
                 [action]="spectate.bind(this)"
             />
 
-                <app-solid-button icon="./assets/img/tab-icons/profile.svg" [color]="ButtonColor.GREY" tooltip="View profile" tooltipDirection="right" (smartClick)="viewProfile()"/>
+            <app-solid-button icon="./assets/img/tab-icons/profile.svg" [color]="ButtonColor.GREY" tooltip="View profile" tooltipDirection="right" (smartClick)="viewProfile()"/>
                     
-            <app-solid-button icon="./assets/img/button-icons/challenge.svg" [color]="ButtonColor.GREY" [disabled]="!friendInfo.isOnline || !!friendInfo.activity"
+            <app-solid-button *ngIf="(environment$ | async) === DeploymentEnvironment.DEV" icon="./assets/img/button-icons/challenge.svg" [color]="ButtonColor.GREY" [disabled]="!friendInfo.isOnline || !!friendInfo.activity"
                 [tooltip]="friendInfo.activity ? busyActivities[friendInfo.activity] : (friendInfo.isOnline ? ('Challenge ' + friendInfo.username + ' to a match!') : friendInfo.username + ' is not online')"
                 tooltipDirection="right" (smartClick)="sendChallenge()" />
             <app-solid-button icon="./assets/img/puzzle-button-icons/delete.svg" class="delete" [color]="ButtonColor.GREY" (smartClick)="endFriendship()" tooltip="Remove friend" tooltipDirection="right" />
