fix game analysis font

--- a/client/src/app/components/layout/game-analysis/game-analysis/game-analysis.component.scss
+++ b/client/src/app/components/layout/game-analysis/game-analysis/game-analysis.component.scss
@@ -174,14 +174,14 @@ app-loading-animation {
 }
 
 .board-stat .label {
-    font-family: 'Pixel NES';
+    font-family: 'NES';
     font-size: 13px;
     font-weight: 600;
     margin: 0;
 }
 
 .board-stat .value {
-    font-family: 'Pixel NES';
+    font-family: 'NES';
     font-size: 24px;
     font-weight: 700;
     margin: 0;
@@ -195,7 +195,7 @@ app-loading-animation {
 }
 
 .center p {
-    font-family: 'Pixel NES';
+    font-family: 'NES';
     font-size: 13px;
     font-weight: 600;
     margin: 0;
